# butterfly-compiler

./: .gitignore  LICENSE  README.md  butterfly_compiler.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
butterfly/: __init__.py  block.py  config.py  core.py  differentiable.py  discovery.py  dynamics.py  export_qasm.py  fwht.py  ntt.py  operad.py  qft.py  semiring.py  solvability.py  spectral.py  symbolic.py  thermodynamics.py  utils.py
butterfly/tests/: test_all.py  test_block_symbolic.py  test_core.py  test_differentiable.py  test_discovery.py  test_dynamics.py  test_export.py  test_operad.py  test_properties.py  test_qft_ntt.py  test_solvability.py  test_spectral.py  test_thermodynamics.py
experiments/: exp1.py  exp10_particle_box.py  exp11_tunnelling.py  exp12_aharonov_bohm.py  exp2_ls_bridge.py  exp3_multi_slit.py  exp4_harmonic.py  exp5_dyson_qubits.py  exp6_quantum_potential.py  exp7_cat_state.py  exp8_heat_equation.py  exp9_variational_gs.py
