[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "butterfly-compiler"
version = "1.0"
description = "Butterfly Compiler — fast Kronecker-power transforms over arbitrary semirings"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Butterfly Research Project"},
]
keywords = ["butterfly", "kronecker", "fft", "qft", "semiring", "lie-algebra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
all = [
    "numba>=0.60",
    "scipy>=1.13",
]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]
dev = [
    "ruff>=0.5",
    "line-profiler>=4.1",
]
numba = ["numba>=0.60"]
scipy = ["scipy>=1.13"]

[project.urls]
Repository = "https://github.com/butterfly-compiler/butterfly-compiler"
Documentation = "https://github.com/butterfly-compiler/butterfly-compiler#readme"

[project.scripts]
butterfly = "butterfly_compiler:main"

[tool.setuptools.packages.find]
include = ["butterfly*"]

[tool.setuptools.package-data]
butterfly = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "C4", "B", "A", "Q", "SIM", "PERF",
]
ignore = [
    "E501",
    "Q000",
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]
"experiments/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["butterfly/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
